Defined elements in script

--- a/index.html
+++ b/index.html
@@ -20,18 +20,13 @@
 
       <textarea
         name="values"
-        id=""
         cols="30"
         rows="6"
         class="form-field"
         placeholder="Choices here..."
       ></textarea>
 
-      <div class="tags" data-tags>
-        <div class="tag">Choice 1</div>
-        <div class="tag">Choice 1</div>
-        <div class="tag">Choice 1</div>
-      </div>
+      <div class="tags" data-tags></div>
     </main>
   </body>
 </html>
